force-app/main/default/objects/Key_Report__c/Key_Report__c.object-meta.xml
<CustomObject>
    <label>Key Report</label>
    <nameField>
        <displayFormat>KeyReport-{00000}</displayFormat>
        <label>Key Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>