force-app/main/default/objects/Key_Report__c/fields/Company_Level__c.field-meta.xml
<CustomField>
    <fullName>Company_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Level</label>
    <type>Checkbox</type>
</CustomField>