force-app/main/default/objects/Key_Report__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>