force-app/main/default/objects/Key_Report__c/listViews/Key_Report.listView-meta.xml
<ListView>
    <fullName>Key_Report</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Key Reports</value>
    </filters>
    <label>Key Report</label>
</ListView>