force-app/main/default/objects/Key_Report__c/listViews/Quick_Link.listView-meta.xml
<ListView>
    <fullName>Quick_Link</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Kerridge Links</value>
    </filters>
    <label>Quick Link</label>
</ListView>