force-app/main/default/objects/Key_Report__c/listViews/System_Report.listView-meta.xml
<ListView>
    <fullName>System_Report</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Report_Url__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>System Report</label>
</ListView>